--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tool_bar_title">Fragments</string>
+    <string name="back_button">Back</string>
+    <string name="ic_search">Search</string>
 </resources>
